--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+logging.level.org.hibernate.SQL=DEBUG
+spring.datasource.platform=h2
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.datasource.platform=h2
-logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:h2:~/test
 server.port = 8888
